# llfIM

./: .gitignore  README.md
client/llfcchat/: BubbleFrame.cpp  BubbleFrame.h  ChatItemBase.cpp  ChatItemBase.h  ChatView.cpp  ChatView.h  MessageTextEdit.cpp  MessageTextEdit.h  PictureBubble.cpp  PictureBubble.h  TextBubble.cpp  TextBubble.h  adduseritem.cpp  adduseritem.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfrienditem.ui  applyfriendlist.cpp  applyfriendlist.h  applyfriendpage.cpp  applyfriendpage.h  applyfriendpage.ui  authenfriend.cpp  authenfriend.h  authenfriend.ui  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  (+72 more)
server/ChatServer/: AsioIOServicePool.cpp  CServer.cpp  CServer.h  CSession.cpp  CSession.h  ChatServer.cpp  data.h  (+18 more)
server/chatServer2/: AsioIOServicePool.cpp  CMakeLists.txt  CServer.cpp  CSession.cpp  CSession.h  ChatServer.cpp  ChatServiceImpl.cpp  ChatServiceImpl.h  LogicSystem.cpp  LogicSystem.h  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h  RedisMgr.cpp  RedisMgr.h  UserMgr.cpp  a.out  config.ini  const.h  message.proto  mq.cc  rd.cc  start.sh
server/chatServer2/rpc/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h
server/chatServer2/test/: 1001client.cpp  table
sqlbackup/: llfc.sql
sql备份/: llfc.sql
个人开发文档/: 15、登录和状态服务.md  16-17、客户端实现TCP管理者与asio实现tcp服务器.md  17、验证服务和用户信息管理.md  2、单例模板和http管理类  2024-5-19.md  4、绑定和监听连接  2024-5-19.md  8、邮箱认证服务.md
(+90 files in other folders)
